About to publish sushi website

--- a/recipes/sushi.html
+++ b/recipes/sushi.html
@@ -7,18 +7,8 @@
 </head>
 <body>
     <h1>Sushi</h1>
+    
+    <a href="../index.html">Return to Home</a>
 </body>
 </html>
 
-
-<test>
-    <h1>Sushi</h1>
-</test>
-
-<test>
-    <h1>Sushi</h1>
-</test>
-
-<test>
-    <h1>Sushi</h1>
-</test>
